manifests/andreas.yaml
apiVersion: v1
items:
- apiVersion: apps/v1
  kind: Deployment
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{},"labels":{"app":"andreas"},"name":"andreas-deployment","namespace":"default"},"spec":{"replicas":3,"selector":{"matchLabels":{"app":"andreas-app"}},"template":{"metadata":{"labels":{"app":"andreas-app"}},"spec":{"containers":[{"image":"/andreas:latest","name":"andreas-container","ports":[{"containerPort":80}],"resources":{"limits":{"cpu":"500m","memory":"100m"},"requests":{"cpu":"128Mi","memory":"100m"}}}]}}}}
    labels:
      app: andreas
    name: andreas-deployment
    namespace: default
  spec:
    replicas: 3
    selector:
      matchLabels:
        app: andreas-app
    template:
      metadata:
        labels:
          app: andreas-app
      spec:
        containers:
        - image: /andreas:latest
          name: andreas-container
          ports:
          - containerPort: 80
          resources:
            limits:
              cpu: 500m
              memory: 100m
            requests:
              cpu: 128Mi
              memory: 100m
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"v1","kind":"Service","metadata":{"annotations":{},"name":"andreas-service","namespace":"default"},"spec":{"ports":[{"port":80,"protocol":"TCP","targetPort":80}],"selector":{"app":"andreas-app"},"type":"ClusterIP"}}
    name: andreas-service
    namespace: default
  spec:
    ports:
    - port: 80
      protocol: TCP
      targetPort: 80
    selector:
      app: andreas-app
    type: ClusterIP
- apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"networking.k8s.io/v1","kind":"Ingress","metadata":{"annotations":{},"name":"andreas-ingress","namespace":"default"},"spec":{"rules":[{"host":"andreas_andreas.example.com","http":{"paths":[{"backend":{"service":{"name":"andreas-service","port":{"number":80}}},"path":"/","pathType":"Prefix"}]}}]}}
    name: andreas-ingress
    namespace: default
  spec:
    rules:
    - host: andreas_andreas.example.com
      http:
        paths:
        - backend:
            service:
              name: andreas-service
              port:
                number: 80
          path: /
          pathType: Prefix
kind: List
metadata: {}
