manifests/app3.yaml
apiVersion: v1
items:
- apiVersion: apps/v1
  kind: Deployment
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{},"labels":{"app":"app3"},"name":"app3-deployment","namespace":"default"},"spec":{"replicas":3,"selector":{"matchLabels":{"app":"app3-app"}},"template":{"metadata":{"labels":{"app":"app3-app"}},"spec":{"containers":[{"image":"/app3:latest","name":"app3-container","ports":[{"containerPort":80}],"resources":{"limits":{"cpu":"500m","memory":"100m"},"requests":{"cpu":"128Mi","memory":"100m"}}}]}}}}
    labels:
      app: app3
    name: app3-deployment
    namespace: default
  spec:
    replicas: 3
    selector:
      matchLabels:
        app: app3-app
    template:
      metadata:
        labels:
          app: app3-app
      spec:
        containers:
        - image: /app3:latest
          name: app3-container
          ports:
          - containerPort: 80
          resources:
            limits:
              cpu: 500m
              memory: 100m
            requests:
              cpu: 128Mi
              memory: 100m
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"v1","kind":"Service","metadata":{"annotations":{},"name":"app3-service","namespace":"default"},"spec":{"ports":[{"port":80,"protocol":"TCP","targetPort":80}],"selector":{"app":"app3-app"},"type":"ClusterIP"}}
    name: app3-service
    namespace: default
  spec:
    ports:
    - port: 80
      protocol: TCP
      targetPort: 80
    selector:
      app: app3-app
    type: ClusterIP
- apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"networking.k8s.io/v1","kind":"Ingress","metadata":{"annotations":{},"name":"app3-ingress","namespace":"default"},"spec":{"rules":[{"host":"app3_example.com","http":{"paths":[{"backend":{"service":{"name":"app3-service","port":{"number":80}}},"path":"/","pathType":"Prefix"}]}}]}}
    name: app3-ingress
    namespace: default
  spec:
    rules:
    - host: app3_example.com
      http:
        paths:
        - backend:
            service:
              name: app3-service
              port:
                number: 80
          path: /
          pathType: Prefix
kind: List
metadata: {}
