manifests/demo1.yaml
apiVersion: v1
items:
- apiVersion: apps/v1
  kind: Deployment
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{},"labels":{"app":"demo1"},"name":"demo1-deployment","namespace":"default"},"spec":{"replicas":3,"selector":{"matchLabels":{"app":"demo1-app"}},"template":{"metadata":{"labels":{"app":"demo1-app"}},"spec":{"containers":[{"image":"/demo1:latest","name":"demo1-container","ports":[{"containerPort":80}],"resources":{"limits":{"cpu":"500m","memory":"100m"},"requests":{"cpu":"128Mi","memory":"100m"}}}]}}}}
    labels:
      app: demo1
    name: demo1-deployment
    namespace: default
  spec:
    replicas: 3
    selector:
      matchLabels:
        app: demo1-app
    template:
      metadata:
        labels:
          app: demo1-app
      spec:
        containers:
        - image: /demo1:latest
          name: demo1-container
          ports:
          - containerPort: 80
          resources:
            limits:
              cpu: 500m
              memory: 100m
            requests:
              cpu: 128Mi
              memory: 100m
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"v1","kind":"Service","metadata":{"annotations":{},"name":"demo1-service","namespace":"default"},"spec":{"ports":[{"port":80,"protocol":"TCP","targetPort":80}],"selector":{"app":"demo1-app"},"type":"ClusterIP"}}
    name: demo1-service
    namespace: default
  spec:
    ports:
    - port: 80
      protocol: TCP
      targetPort: 80
    selector:
      app: demo1-app
    type: ClusterIP
- apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"networking.k8s.io/v1","kind":"Ingress","metadata":{"annotations":{},"name":"demo1-ingress","namespace":"default"},"spec":{"rules":[{"host":"demo1_andreas.example.com","http":{"paths":[{"backend":{"service":{"name":"demo1-service","port":{"number":80}}},"path":"/","pathType":"Prefix"}]}}]}}
    name: demo1-ingress
    namespace: default
  spec:
    rules:
    - host: demo1_andreas.example.com
      http:
        paths:
        - backend:
            service:
              name: demo1-service
              port:
                number: 80
          path: /
          pathType: Prefix
kind: List
metadata: {}
