manifests/dimitris.yaml
apiVersion: v1
items:
- apiVersion: apps/v1
  kind: Deployment
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{},"labels":{"app":"dimitris"},"name":"dimitris-deployment","namespace":"default"},"spec":{"replicas":3,"selector":{"matchLabels":{"app":"dimitris-app"}},"template":{"metadata":{"labels":{"app":"dimitris-app"}},"spec":{"containers":[{"image":"/dimitris:latest","name":"dimitris-container","ports":[{"containerPort":80}],"resources":{"limits":{"cpu":"500m","memory":"100m"},"requests":{"cpu":"128Mi","memory":"100m"}}}]}}}}
    labels:
      app: dimitris
    name: dimitris-deployment
    namespace: default
  spec:
    replicas: 3
    selector:
      matchLabels:
        app: dimitris-app
    template:
      metadata:
        labels:
          app: dimitris-app
      spec:
        containers:
        - image: /dimitris:latest
          name: dimitris-container
          ports:
          - containerPort: 80
          resources:
            limits:
              cpu: 500m
              memory: 100m
            requests:
              cpu: 128Mi
              memory: 100m
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"v1","kind":"Service","metadata":{"annotations":{},"name":"dimitris-service","namespace":"default"},"spec":{"ports":[{"port":80,"protocol":"TCP","targetPort":80}],"selector":{"app":"dimitris-app"},"type":"ClusterIP"}}
    name: dimitris-service
    namespace: default
  spec:
    ports:
    - port: 80
      protocol: TCP
      targetPort: 80
    selector:
      app: dimitris-app
    type: ClusterIP
- apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"networking.k8s.io/v1","kind":"Ingress","metadata":{"annotations":{},"name":"dimitris-ingress","namespace":"default"},"spec":{"rules":[{"host":"dimitris_andreas.example.com","http":{"paths":[{"backend":{"service":{"name":"dimitris-service","port":{"number":80}}},"path":"/","pathType":"Prefix"}]}}]}}
    name: dimitris-ingress
    namespace: default
  spec:
    rules:
    - host: dimitris_andreas.example.com
      http:
        paths:
        - backend:
            service:
              name: dimitris-service
              port:
                number: 80
          path: /
          pathType: Prefix
kind: List
metadata: {}
