manifests/john.yaml
apiVersion: v1
items:
- apiVersion: apps/v1
  kind: Deployment
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{},"labels":{"app":"john"},"name":"john-deployment","namespace":"default"},"spec":{"replicas":3,"selector":{"matchLabels":{"app":"john-app"}},"template":{"metadata":{"labels":{"app":"john-app"}},"spec":{"containers":[{"image":"/john:latest","name":"john-container","ports":[{"containerPort":80}],"resources":{"limits":{"cpu":"1000m","memory":"500m"},"requests":{"cpu":"32Mi","memory":"500m"}}}]}}}}
    labels:
      app: john
    name: john-deployment
    namespace: default
  spec:
    replicas: 3
    selector:
      matchLabels:
        app: john-app
    template:
      metadata:
        labels:
          app: john-app
      spec:
        containers:
        - image: /john:latest
          name: john-container
          ports:
          - containerPort: 80
          resources:
            limits:
              cpu: 1000m
              memory: 500m
            requests:
              cpu: 32Mi
              memory: 500m
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"v1","kind":"Service","metadata":{"annotations":{},"name":"john-service","namespace":"default"},"spec":{"ports":[{"port":80,"protocol":"TCP","targetPort":80}],"selector":{"app":"john-app"},"type":"ClusterIP"}}
    name: john-service
    namespace: default
  spec:
    ports:
    - port: 80
      protocol: TCP
      targetPort: 80
    selector:
      app: john-app
    type: ClusterIP
- apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"networking.k8s.io/v1","kind":"Ingress","metadata":{"annotations":{},"name":"john-ingress","namespace":"default"},"spec":{"rules":[{"host":"john_john.example.com","http":{"paths":[{"backend":{"service":{"name":"john-service","port":{"number":80}}},"path":"/","pathType":"Prefix"}]}}]}}
    name: john-ingress
    namespace: default
  spec:
    rules:
    - host: john_john.example.com
      http:
        paths:
        - backend:
            service:
              name: john-service
              port:
                number: 80
          path: /
          pathType: Prefix
kind: List
metadata: {}
