manifests/joost.yaml
apiVersion: v1
items:
- apiVersion: apps/v1
  kind: Deployment
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{},"labels":{"app":"joost"},"name":"joost-deployment","namespace":"default"},"spec":{"replicas":3,"selector":{"matchLabels":{"app":"joost-app"}},"template":{"metadata":{"labels":{"app":"joost-app"}},"spec":{"containers":[{"image":"/joost:latest","name":"joost-container","ports":[{"containerPort":80}],"resources":{"limits":{"cpu":"500m","memory":"100m"},"requests":{"cpu":"128Mi","memory":"100m"}}}]}}}}
    labels:
      app: joost
    name: joost-deployment
    namespace: default
  spec:
    replicas: 3
    selector:
      matchLabels:
        app: joost-app
    template:
      metadata:
        labels:
          app: joost-app
      spec:
        containers:
        - image: /joost:latest
          name: joost-container
          ports:
          - containerPort: 80
          resources:
            limits:
              cpu: 500m
              memory: 100m
            requests:
              cpu: 128Mi
              memory: 100m
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"v1","kind":"Service","metadata":{"annotations":{},"name":"joost-service","namespace":"default"},"spec":{"ports":[{"port":80,"protocol":"TCP","targetPort":80}],"selector":{"app":"joost-app"},"type":"ClusterIP"}}
    name: joost-service
    namespace: default
  spec:
    ports:
    - port: 80
      protocol: TCP
      targetPort: 80
    selector:
      app: joost-app
    type: ClusterIP
- apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"networking.k8s.io/v1","kind":"Ingress","metadata":{"annotations":{},"name":"joost-ingress","namespace":"default"},"spec":{"rules":[{"host":"joost_joost.example.com","http":{"paths":[{"backend":{"service":{"name":"joost-service","port":{"number":80}}},"path":"/","pathType":"Prefix"}]}}]}}
    name: joost-ingress
    namespace: default
  spec:
    rules:
    - host: joost_joost.example.com
      http:
        paths:
        - backend:
            service:
              name: joost-service
              port:
                number: 80
          path: /
          pathType: Prefix
kind: List
metadata: {}
